
2010-02-27
Initial project in ajcodekatas
BasicObject w/initial tests
Collection w/initial tests

2010-02-28
BasicObjectSerializer initial version and tests
Collection.Delete w/tests
Collection.FindAll w/tests
Collection.Update w/tests
Collection.DeleteObject w/test
Cursor

2010-03-01
Class Diagrams